allow long news headlines to extend banner on single pages, fix center-aligned feature text on success-stories

--- a/app/assets/stylesheets/pages/_news.scss
+++ b/app/assets/stylesheets/pages/_news.scss
@@ -8,10 +8,16 @@
   }
 
   // single post styles
-  &.single-post .block-content {
-    p {
-      a:not(.btn) {
-        text-decoration: underline;
+  &.single-post {
+    .banner-wrap {
+      height: auto;
+      min-height: 50%;
+    }
+    .block-content {
+      p {
+        a:not(.btn) {
+          text-decoration: underline;
+        }
       }
     }
   }
@@ -96,7 +102,7 @@
                   background: $brand-main;
                 }
               }
-            } 
+            }
           }
         }
       }
@@ -116,7 +122,7 @@
       }
       .accordion-content {
         @include dots($white);
-      } 
+      }
     }
     .-gray {
       &.active {
